# chb

./: .gitignore  README.md  app.py  botek.py  chatbot.db  exp.py  extract_db.py  grid.html  kekl.py  pyproject.toml  test.py
instance/: chatbot.db
templates/: base.html  base2.html  chat.html  grid.html  intro.html  no_access.html  not_found.html  outro.html  thanks.html
