[tool.poetry]
name = "chatbot_scripts"
version = "0.2.0"
description = "Chatbot pro diplomovou práci"
authors = ["Albert Maršík <albert.marsik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
gunicorn = "^20.0.4"
corpy = "^0.2.3"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pandas = "^1.1.4"
openpyxl = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
